--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -2,7 +2,7 @@
 {% block env %}{% endblock env %}
 
 {% block start %}
-def double_substring(line: sting) -> int:
+def double_substring(line: str) -> int:
     """
         length of the longest substring that non-overlapping repeats more than once.
     """
