--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -3,9 +3,6 @@
 
 {% block start %}
 def double_substring(line: str) -> int:
-    """
-        length of the longest substring that non-overlapping repeats more than once.
-    """
     # your code here
     return 0
 {% endblock start %}
@@ -15,6 +12,7 @@ print('Example:')
 print(double_substring('aaaa'))
 {% endblock %}
 
+# These "asserts" are used for self-checking
 {% block tests %}
 {% for t in tests %}
 assert {% block call %}double_substring({{t.input|p_args}})
